{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 81,
  "lineage": "a7846713-d652-6178-f2f8-13fc0c83ba40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-for-Nat-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df44b3ddb27c5d39",
            "domain": "vpc",
            "id": "eipalloc-0df44b3ddb27c5d39",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-221-178.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.221.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MY_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:internet-gateway/igw-0288f2bb67d130eb5",
            "id": "igw-0288f2bb67d130eb5",
            "owner_id": "969415682385",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df44b3ddb27c5d39",
            "association_id": "eipassoc-0e13c92cc45d02410",
            "connectivity_type": "public",
            "id": "nat-0c1eb00d733faba6a",
            "network_interface_id": "eni-0cda13890b6a73d15",
            "private_ip": "10.0.1.126",
            "public_ip": "3.7.221.178",
            "subnet_id": "subnet-0b91892d8cdbb3653"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:route-table/rtb-0a047d9cc55705102",
            "id": "rtb-0a047d9cc55705102",
            "owner_id": "969415682385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c1eb00d733faba6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route"
            },
            "tags_all": {
              "Name": "Private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:route-table/rtb-001adfa6a8d01b057",
            "id": "rtb-001adfa6a8d01b057",
            "owner_id": "969415682385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0288f2bb67d130eb5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route"
            },
            "tags_all": {
              "Name": "Public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "App2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058c9cee64aecb604",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-0e51980a201945011"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.App2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "App_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4143b468d68cbfb",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-0fc57ff2cb9cdfa56"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.App_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DB2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de0a20184eee1770",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-060dfa6f819fee419"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.DB2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DB_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2439a0e45559ac4",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-06ecc2f0492d87b02"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.DB_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "FE2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081ea83ad97b7bec6",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-0df82467dd132063e"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.FE2_private_ap_south_1b",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "FE_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0250ead16a0a338c5",
            "route_table_id": "rtb-0a047d9cc55705102",
            "subnet_id": "subnet-00e3ad98a84f35f1f"
          },
          "dependencies": [
            "aws_eip.eip-for-Nat-Gateway",
            "aws_nat_gateway.gw",
            "aws_route_table.Private-RT",
            "aws_subnet.FE_private_ap_south_1a",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RT-assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f70958f88ed77d07",
            "route_table_id": "rtb-001adfa6a8d01b057",
            "subnet_id": "subnet-0b91892d8cdbb3653"
          },
          "dependencies": [
            "aws_internet_gateway.MY_IGW",
            "aws_route_table.Public-RT",
            "aws_subnet.public-subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:security-group/sg-027b4fc2521749b68",
            "description": "Enable HTTP/HTTPS access on Port 80/443 via ALB and SSH access on Port 22 via SSH SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027b4fc2521749b68",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c98b6284f013885e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web Server Security Group",
            "name_prefix": "",
            "owner_id": "969415682385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Frontend-SG"
            },
            "tags_all": {
              "Name": "Frontend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh-security-group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:security-group/sg-0c98b6284f013885e",
            "description": "Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c98b6284f013885e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Bastion Security Group",
            "name_prefix": "",
            "owner_id": "969415682385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Security Group"
            },
            "tags_all": {
              "Name": "Bastion Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0e51980a201945011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e51980a201945011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App2_ap_south_1b"
            },
            "tags_all": {
              "Name": "App2_ap_south_1b"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "App_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0fc57ff2cb9cdfa56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc57ff2cb9cdfa56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_ap_south_1a"
            },
            "tags_all": {
              "Name": "private_ap_south_1a"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-060dfa6f819fee419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060dfa6f819fee419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB2_private_ap_south_1b"
            },
            "tags_all": {
              "Name": "DB2_private_ap_south_1b"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DB_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-06ecc2f0492d87b02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ecc2f0492d87b02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DB_private_ap_south_1a"
            },
            "tags_all": {
              "Name": "DB_private_ap_south_1a"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "FE2_private_ap_south_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0df82467dd132063e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df82467dd132063e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FE2_private_ap_south_1b"
            },
            "tags_all": {
              "Name": "FE2_private_ap_south_1b"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "FE_private_ap_south_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-00e3ad98a84f35f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e3ad98a84f35f1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FE_private_ap_south_1a"
            },
            "tags_all": {
              "Name": "FE_private_ap_south_1a"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:subnet/subnet-0b91892d8cdbb3653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91892d8cdbb3653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "969415682385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-069ae7edf0839afc4"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:969415682385:vpc/vpc-069ae7edf0839afc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2f4035106d9b389",
            "default_route_table_id": "rtb-08f0e6e9a764fa807",
            "default_security_group_id": "sg-065ef87553186d2c0",
            "dhcp_options_id": "dopt-028209f03daa103ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069ae7edf0839afc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f0e6e9a764fa807",
            "owner_id": "969415682385",
            "tags": {
              "Name": "Test_VPC"
            },
            "tags_all": {
              "Name": "Test_VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}